# collector-api

./: Dockerfile  README.md  docker-compose.yml  makefile  poetry.toml  pyproject.toml
src/: main.py
src/app/: __init__.py  app.py  utils.py
src/app/controllers/: etl.py
src/app/schemas/: __init__.py  etl.py
src/app/services/: __init__.py  etl.py
src/config/: __init__.py  config.py
