[tool.poetry]
name = "collector-api"
version = "0.1.0"
description = "RESTful API to ETL pipeline."
authors = ["jordaoa <andre.nascimento@ccc.ufcg.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-pydantic-spec = "0.4.5"
Flask = "^2.3.3"
redis = "^5.0.0"
nltk = "^3.8.1"
praw = "^7.7.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
